# pythonbyexample

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.githooks/: post-merge  post-rewrite  pre-commit
.github/: pull_request_template.md
docs/: codebase-audit-2026-06-11.md  elevation-strategy.md  example-figure-rubric.md  example-graph-score-impact.md  example-graph-see-also.md  example-quality-new-vs-old.csv  example-quality-new-vs-old.md  example-quality-rubric.md  example-source-format-spec.md  journey-visualisation-rubric.md  learner-analytics.md  lessons-learned.md  literate-programming-inspiration.md  markdown-cell-migration-investigation.md  observability-spec.md  quality-registries.toml  quality-search.md  research-algebrica.md  research-similar-sites.md  rubric-audit-2026-05-12.md  rubric-saturation.md  shallow-example-audit.md  turnstile-runner-protection-spec.md  visual-explainer-spec.md
public/: _headers  editor.32983031ee9a.js  editor.a550bf2266bd.js  editor.bbf94cd1abda.js  editor.dd81f5171b14.js  editor.js  robots.txt  runner.09997393b175.js  runner.96b105eef218.js  runner.a5b99ceb274f.js  runner.d3515b57bc3e.js  runner.js  search-index.332712b2e502.json  search-index.f08e8599474a.json  search.158bd7afa114.js  search.ab0effeac6ce.js  search.js  site.06e133dcde6a.css  site.0e32b85ff236.css  site.150df025a28b.css  site.2136ebb3ad99.css  site.215b3101140a.css  site.3611579bfe10.css  site.400d69f4ef8b.css  site.5f6f7da7c305.css  site.89fbe5e5f734.css  site.css  (+8 more)
(+204 files in other folders)
