[project]
name = "pythonbyexample"
version = "0.1.0"
description = "Python By Example on Cloudflare Python Workers"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
]

[dependency-groups]
workers = [
    "workers-py",
    "workers-runtime-sdk",
]
dev = [
    "pillow>=11.3,<12",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
src = ["src"]
